# baker-samefringe-cpp

./: .travis.yml  CMakeLists.txt  README.md  samefringe.hpp  tests.cpp
test/: CMakeLists.txt  samefringe.hpp  test1.cpp
